// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/keyid > should fail on template placeholder opener 1`] = `
tokens[4]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 punctuator (1:1-1:2)
	│		 value: "$"
	│		 whitespace: ""
	├─2 punctuator (1:2-1:3)
	│		 value: "{"
	│		 whitespace: ""
	├─3 eof (1:3-1:3)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/keyid > should tokenize identifier and keywords (chars.dollar) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 keyid (1:1-1:2)
	│		 value: "$"
	│		 whitespace: ""
	│		 private: false
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/keyid > should tokenize identifier and keywords (chars.dollar, start) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 keyid (1:1-1:6)
	│		 value: "$html"
	│		 whitespace: ""
	│		 private: false
	├─2 eof (1:6-1:6)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/keyid > should tokenize identifier and keywords (chars.underscore) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 keyid (1:1-1:2)
	│		 value: "_"
	│		 whitespace: ""
	│		 private: false
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/keyid > should tokenize identifier and keywords (chars.underscore, start) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 keyid (1:1-1:4)
	│		 value: "_id"
	│		 whitespace: ""
	│		 private: false
	├─2 eof (1:4-1:4)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/keyid > should tokenize identifier and keywords (keyword) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 keyid (1:1-1:5)
	│		 value: "this"
	│		 whitespace: ""
	│		 private: true
	├─2 eof (1:5-1:5)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/keyid > should tokenize identifier and keywords (private identifier) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 keyid (1:1-1:9)
	│		 value: "#indices"
	│		 whitespace: ""
	│		 private: true
	├─2 eof (1:9-1:9)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/keyid > should tokenize identifier and keywords (public identifier) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 keyid (1:1-1:6)
	│		 value: "keyid"
	│		 whitespace: ""
	│		 private: true
	├─2 eof (1:6-1:6)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/keyid > should tokenize identifier and keywords (unicode escape sequence) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 keyid (1:1-1:3)
	│		 value: "你好"
	│		 whitespace: ""
	│		 private: true
	├─2 eof (1:3-1:3)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/keyid > should tokenize identifier and keywords (unicode escape sequence, escaped) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 keyid (1:1-1:13)
	│		 value: "\\\\u4F60\\\\u597D"
	│		 whitespace: ""
	│		 private: true
	├─2 eof (1:13-1:13)
	│		 value: null
	│		 whitespace: ""
`;
